@@ -123,6 +123,7 @@ Error is fixed, was due to a src/services/Services.hpp old code
      see https://scan.coverity.com/download for more (currently at 4%)
 - [ ] rev 253 uploaded to coverity scan 23 Nov     
 **** TODO Options gamestate
+     CLOCK: [2017-01-09 lun. 14:22]--[2017-01-09 lun. 14:57] =>  0:35
      CLOCK: [2017-01-09 lun. 13:54]--[2017-01-09 lun. 14:18] =>  0:24
      CLOCK: [2016-12-28 mer. 08:50]--[2016-12-28 mer. 08:55] =>  0:05
      CLOCK: [2016-12-28 mer. 07:56]--[2016-12-28 mer. 08:46] =>  0:50
@@ -153,9 +154,11 @@ Error is fixed, was due to a src/services/Services.hpp old code
     - [X] Handle probe error using an exception if we can't probe
       in any ways (if two ways fail)
       From src/client/Exception.hpp
-    - [ ] We must find in wich string form we must save resolution
+    - [X] We must find in wich string form we must save resolution
       to save resolution to ogre.cfg. String have spaces before and
       after the "x" character. Sometimes one space, sometimes two.
+    - [ ] Not sure we need the int/int result, maybe the probe function
+      could directly return string version
 - [ ] May remove the src/client/LoadingBar.* (not used anymore)
   Maybe keep it to change it to a CEGUI layout, used multiple times
   When generating local level the first time, when cloning a server etc...
